lincoln/ruby/lib/lang/parse/core.rb
# this grammar is mostly auto-generated from the rats! grammar of the java implementation of P2.
# rats!, treetop and peg/leg are all implementations of packrat parsers, which are memoizing
# parsers for Parsing expression Grammars (PEGs).
# syntax-directed translation (rats! -> treetop) was performed using a PEG grammar in the peg/leg
# syntax.  the grammar recognizes a rats! grammar and outputs an equivalent treetop grammar.
#
# unfortunately, the evaluation strategy for treetop programs seems to differ significantly from
# that of rats!.  the auto-generated grammar contained numerous instances of left-recursive rules
# that caused stack overflows in ruby.  these all had to be manually re-written to remove
# left-recursion. (note: these rewrites need to be carefully reread: the operator precedence is
# likely thrown off)

# also, PEG rules with uppercase first letters causes namespace issues in ruby.  before I figured this
# out, I was unable to descend below a nonterminal semantic element, and structured the code in 
# some odd ways to work around this (see the semantic block for "name" (previously "Name"))


module Overlog
  include Treetop::Runtime

  def root
    @root || :pprogram
  end

  include Ddl

  module Pprogram0
    def pprogramname
      elements[0]
    end

    def Spacing
      elements[1]
    end

    def Clauses
      elements[2]
    end
  end

  def _nt_pprogram
    start_index = index
    if node_cache[:pprogram].has_key?(index)
      cached = node_cache[:pprogram][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_pprogramname
    s0 << r1
    if r1
      r2 = _nt_Spacing
      s0 << r2
      if r2
        r3 = _nt_Clauses
        s0 << r3
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Pprogram0)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:pprogram][start_index] = r0

    return r0
  end

  module Pprogramname0
    def Spacing
      elements[1]
    end

    def word
      elements[2]
    end

  end

  module Pprogramname1
				def pprogramname
					return word.text_value
				end
  end

  def _nt_pprogramname
    start_index = index
    if node_cache[:pprogramname].has_key?(index)
      cached = node_cache[:pprogramname][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if input.index('program', index) == index
      r1 = (SyntaxNode).new(input, index...(index + 7))
      @index += 7
    else
      terminal_parse_failure('program')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_Spacing
      s0 << r2
      if r2
        r3 = _nt_word
        s0 << r3
        if r3
          if input.index(';', index) == index
            r4 = (SyntaxNode).new(input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(';')
            r4 = nil
          end
          s0 << r4
        end
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Pprogramname0)
      r0.extend(Pprogramname1)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:pprogramname][start_index] = r0

    return r0
  end

  module Clauses0
    def Clause
      elements[0]
    end

    def semicolon
      elements[1]
    end
  end

  def _nt_Clauses
    start_index = index
    if node_cache[:Clauses].has_key?(index)
      cached = node_cache[:Clauses][index]
      @index = cached.interval.end if cached
      return cached
    end

    s0, i0 = [], index
    loop do
      i1, s1 = index, []
      r2 = _nt_Clause
      s1 << r2
      if r2
        r3 = _nt_semicolon
        s1 << r3
      end
      if s1.last
        r1 = (SyntaxNode).new(input, i1...index, s1)
        r1.extend(Clauses0)
      else
        self.index = i1
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    r0 = SyntaxNode.new(input, i0...index, s0)

    node_cache[:Clauses][start_index] = r0

    return r0
  end

  module Semicolon0
    def Spacing
      elements[0]
    end

    def Spacing
      elements[2]
    end
  end

  def _nt_semicolon
    start_index = index
    if node_cache[:semicolon].has_key?(index)
      cached = node_cache[:semicolon][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_Spacing
    s0 << r1
    if r1
      if input.index(';', index) == index
        r2 = (SyntaxNode).new(input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure(';')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_Spacing
        s0 << r3
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Semicolon0)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:semicolon][start_index] = r0

    return r0
  end

  def _nt_Clause
    start_index = index
    if node_cache[:Clause].has_key?(index)
      cached = node_cache[:Clause][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    r1 = _nt_Rule
    if r1
      r0 = r1
    else
      r2 = _nt_Watch
      if r2
        r0 = r2
      else
        r3 = _nt_Fact
        if r3
          r0 = r3
        else
          r4 = _nt_Definition
          if r4
            r0 = r4
          else
            r5 = _nt_Import
            if r5
              r0 = r5
            else
              r6 = _nt_statement
              if r6
                r0 = r6
              else
                self.index = i0
                r0 = nil
              end
            end
          end
        end
      end
    end

    node_cache[:Clause][start_index] = r0

    return r0
  end

  def _nt_statement
    start_index = index
    if node_cache[:statement].has_key?(index)
      cached = node_cache[:statement][index]
      @index = cached.interval.end if cached
      return cached
    end

    r0 = super

    node_cache[:statement][start_index] = r0

    return r0
  end

  module Import0
    def Spacing
      elements[1]
    end

    def Typename
      elements[2]
    end
  end

  def _nt_Import
    start_index = index
    if node_cache[:Import].has_key?(index)
      cached = node_cache[:Import][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if input.index('import', index) == index
      r1 = (SyntaxNode).new(input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure('import')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_Spacing
      s0 << r2
      if r2
        r3 = _nt_Typename
        s0 << r3
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Import0)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:Import][start_index] = r0

    return r0
  end

  module Fact0
    def ptablename
      elements[0]
    end

    def opar
      elements[1]
    end

    def expressionList
      elements[2]
    end

    def cpar
      elements[3]
    end
  end

  module Fact1
				def Fact
					return self.ptablename.text_value
				end
  end

  def _nt_Fact
    start_index = index
    if node_cache[:Fact].has_key?(index)
      cached = node_cache[:Fact][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_ptablename
    s0 << r1
    if r1
      r2 = _nt_opar
      s0 << r2
      if r2
        r3 = _nt_expressionList
        s0 << r3
        if r3
          r4 = _nt_cpar
          s0 << r4
        end
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Fact0)
      r0.extend(Fact1)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:Fact][start_index] = r0

    return r0
  end

  module Rule0
    def deleter
      elements[2]
    end

    def rulehead
      elements[3]
    end

    def followsfrom
      elements[4]
    end

    def RuleBody
      elements[5]
    end
  end

  module Rule1
 
				def Rule
					return self
				end
  end

  def _nt_Rule
    start_index = index
    if node_cache[:Rule].has_key?(index)
      cached = node_cache[:Rule][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if input.index('public', index) == index
      r2 = (SyntaxNode).new(input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure('public')
      r2 = nil
    end
    if r2
      r1 = r2
    else
      r1 = SyntaxNode.new(input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_name
      if r4
        r3 = r4
      else
        r3 = SyntaxNode.new(input, index...index)
      end
      s0 << r3
      if r3
        r5 = _nt_deleter
        s0 << r5
        if r5
          r6 = _nt_rulehead
          s0 << r6
          if r6
            r7 = _nt_followsfrom
            s0 << r7
            if r7
              r8 = _nt_RuleBody
              s0 << r8
            end
          end
        end
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Rule0)
      r0.extend(Rule1)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:Rule][start_index] = r0

    return r0
  end

  module Followsfrom0
    def Spacing
      elements[0]
    end

    def Spacing
      elements[2]
    end
  end

  def _nt_followsfrom
    start_index = index
    if node_cache[:followsfrom].has_key?(index)
      cached = node_cache[:followsfrom][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_Spacing
    s0 << r1
    if r1
      if input.index(':-', index) == index
        r2 = (SyntaxNode).new(input, index...(index + 2))
        @index += 2
      else
        terminal_parse_failure(':-')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_Spacing
        s0 << r3
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Followsfrom0)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:followsfrom][start_index] = r0

    return r0
  end

  module Deleter0
    def Spacing
      elements[0]
    end

    def Spacing
      elements[2]
    end
  end

  module Deleter1
				def delete
					if !(text_value.eql?("")) then
						return true
					else
						print "the TEXT_VALUE was #{text_value}\n"
						return false
					end
				end
  end

  def _nt_deleter
    start_index = index
    if node_cache[:deleter].has_key?(index)
      cached = node_cache[:deleter][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_Spacing
    s0 << r1
    if r1
      if input.index('delete', index) == index
        r3 = (SyntaxNode).new(input, index...(index + 6))
        @index += 6
      else
        terminal_parse_failure('delete')
        r3 = nil
      end
      if r3
        r2 = r3
      else
        r2 = SyntaxNode.new(input, index...index)
      end
      s0 << r2
      if r2
        r4 = _nt_Spacing
        s0 << r4
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Deleter0)
      r0.extend(Deleter1)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:deleter][start_index] = r0

    return r0
  end

  def _nt_rulehead
    start_index = index
    if node_cache[:rulehead].has_key?(index)
      cached = node_cache[:rulehead][index]
      @index = cached.interval.end if cached
      return cached
    end

    r0 = _nt_Predicate

    node_cache[:rulehead][start_index] = r0

    return r0
  end

  def _nt_RuleBody
    start_index = index
    if node_cache[:RuleBody].has_key?(index)
      cached = node_cache[:RuleBody][index]
      @index = cached.interval.end if cached
      return cached
    end

    r0 = _nt_TermList

    node_cache[:RuleBody][start_index] = r0

    return r0
  end

  module TermList0
    def Comma
      elements[0]
    end

    def Term
      elements[1]
    end
  end

  module TermList1
    def Term
      elements[0]
    end

  end

  def _nt_TermList
    start_index = index
    if node_cache[:TermList].has_key?(index)
      cached = node_cache[:TermList][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_Term
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        r4 = _nt_Comma
        s3 << r4
        if r4
          r5 = _nt_Term
          s3 << r5
        end
        if s3.last
          r3 = (SyntaxNode).new(input, i3...index, s3)
          r3.extend(TermList0)
        else
          self.index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = SyntaxNode.new(input, i2...index, s2)
      s0 << r2
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(TermList1)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:TermList][start_index] = r0

    return r0
  end

  def _nt_Term
    start_index = index
    if node_cache[:Term].has_key?(index)
      cached = node_cache[:Term][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    r1 = _nt_TableFunction
    if r1
      r0 = r1
    else
      r2 = _nt_Predicate
      if r2
        r0 = r2
      else
        r3 = _nt_Assignment
        if r3
          r0 = r3
        else
          r4 = _nt_Selection
          if r4
            r0 = r4
          else
            self.index = i0
            r0 = nil
          end
        end
      end
    end

    node_cache[:Term][start_index] = r0

    return r0
  end

  module Definition0
    def opar
      elements[1]
    end

    def ptablename
      elements[2]
    end

    def Comma
      elements[3]
    end

    def Keys
      elements[4]
    end

    def Comma
      elements[5]
    end

    def Schema
      elements[6]
    end

    def cpar
      elements[7]
    end
  end

  module Definition1
    def opar
      elements[1]
    end

    def ptablename
      elements[2]
    end

    def Comma
      elements[3]
    end

    def Schema
      elements[4]
    end

    def cpar
      elements[5]
    end
  end

  module Definition2
				def Definition
					return ptablename.text_value
				end
  end

  def _nt_Definition
    start_index = index
    if node_cache[:Definition].has_key?(index)
      cached = node_cache[:Definition][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if input.index('define', index) == index
      r2 = (SyntaxNode).new(input, index...(index + 6))
      @index += 6
    else
      terminal_parse_failure('define')
      r2 = nil
    end
    s1 << r2
    if r2
      r3 = _nt_opar
      s1 << r3
      if r3
        r4 = _nt_ptablename
        s1 << r4
        if r4
          r5 = _nt_Comma
          s1 << r5
          if r5
            r6 = _nt_Keys
            s1 << r6
            if r6
              r7 = _nt_Comma
              s1 << r7
              if r7
                r8 = _nt_Schema
                s1 << r8
                if r8
                  r9 = _nt_cpar
                  s1 << r9
                end
              end
            end
          end
        end
      end
    end
    if s1.last
      r1 = (SyntaxNode).new(input, i1...index, s1)
      r1.extend(Definition0)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
      r0.extend(Definition2)
    else
      i10, s10 = index, []
      if input.index('define', index) == index
        r11 = (SyntaxNode).new(input, index...(index + 6))
        @index += 6
      else
        terminal_parse_failure('define')
        r11 = nil
      end
      s10 << r11
      if r11
        r12 = _nt_opar
        s10 << r12
        if r12
          r13 = _nt_ptablename
          s10 << r13
          if r13
            r14 = _nt_Comma
            s10 << r14
            if r14
              r15 = _nt_Schema
              s10 << r15
              if r15
                r16 = _nt_cpar
                s10 << r16
              end
            end
          end
        end
      end
      if s10.last
        r10 = (SyntaxNode).new(input, i10...index, s10)
        r10.extend(Definition1)
      else
        self.index = i10
        r10 = nil
      end
      if r10
        r0 = r10
        r0.extend(Definition2)
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:Definition][start_index] = r0

    return r0
  end

  module Opar0
    def Spacing
      elements[0]
    end

    def Spacing
      elements[2]
    end
  end

  def _nt_opar
    start_index = index
    if node_cache[:opar].has_key?(index)
      cached = node_cache[:opar][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_Spacing
    s0 << r1
    if r1
      if input.index('(', index) == index
        r2 = (SyntaxNode).new(input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure('(')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_Spacing
        s0 << r3
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Opar0)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:opar][start_index] = r0

    return r0
  end

  module Cpar0
    def Spacing
      elements[0]
    end

    def Spacing
      elements[2]
    end
  end

  def _nt_cpar
    start_index = index
    if node_cache[:cpar].has_key?(index)
      cached = node_cache[:cpar][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_Spacing
    s0 << r1
    if r1
      if input.index(')', index) == index
        r2 = (SyntaxNode).new(input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure(')')
        r2 = nil
      end
      s0 << r2
      if r2
        r3 = _nt_Spacing
        s0 << r3
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Cpar0)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:cpar][start_index] = r0

    return r0
  end

  module Keys0
    def IntegerList
      elements[2]
    end

  end

  module Keys1
  end

  def _nt_Keys
    start_index = index
    if node_cache[:Keys].has_key?(index)
      cached = node_cache[:Keys][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    i1, s1 = index, []
    if input.index('keys', index) == index
      r2 = (SyntaxNode).new(input, index...(index + 4))
      @index += 4
    else
      terminal_parse_failure('keys')
      r2 = nil
    end
    s1 << r2
    if r2
      if input.index('(', index) == index
        r3 = (SyntaxNode).new(input, index...(index + 1))
        @index += 1
      else
        terminal_parse_failure('(')
        r3 = nil
      end
      s1 << r3
      if r3
        r4 = _nt_IntegerList
        s1 << r4
        if r4
          if input.index(')', index) == index
            r5 = (SyntaxNode).new(input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(')')
            r5 = nil
          end
          s1 << r5
        end
      end
    end
    if s1.last
      r1 = (SyntaxNode).new(input, i1...index, s1)
      r1.extend(Keys0)
    else
      self.index = i1
      r1 = nil
    end
    if r1
      r0 = r1
    else
      i6, s6 = index, []
      if input.index('keys', index) == index
        r7 = (SyntaxNode).new(input, index...(index + 4))
        @index += 4
      else
        terminal_parse_failure('keys')
        r7 = nil
      end
      s6 << r7
      if r7
        if input.index('(', index) == index
          r8 = (SyntaxNode).new(input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('(')
          r8 = nil
        end
        s6 << r8
        if r8
          if input.index(')', index) == index
            r9 = (SyntaxNode).new(input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(')')
            r9 = nil
          end
          s6 << r9
        end
      end
      if s6.last
        r6 = (SyntaxNode).new(input, i6...index, s6)
        r6.extend(Keys1)
      else
        self.index = i6
        r6 = nil
      end
      if r6
        r0 = r6
      else
        self.index = i0
        r0 = nil
      end
    end

    node_cache[:Keys][start_index] = r0

    return r0
  end

  module Schema0
    def TypeDefList
      elements[1]
    end

  end

  def _nt_Schema
    start_index = index
    if node_cache[:Schema].has_key?(index)
      cached = node_cache[:Schema][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if input.index('{', index) == index
      r1 = (SyntaxNode).new(input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('{')
      r1 = nil
    end
    s0 << r1
    if r1
      r2 = _nt_TypeDefList
      s0 << r2
      if r2
        if input.index('}', index) == index
          r3 = (SyntaxNode).new(input, index...(index + 1))
          @index += 1
        else
          terminal_parse_failure('}')
          r3 = nil
        end
        s0 << r3
      end
    end
    if s0.last
      r0 = (SyntaxNode).new(input, i0...index, s0)
      r0.extend(Schema0)
    else
      self.index = i0
      r0 = nil
    end

    node_cache[:Schema][start_index] = r0

    return r0
  end

  module TypeDefList0
    def Comma
      elements[0]
    end

    def Type
      elements[1]
    end
  end

  module TypeDefList1
    def Type
      elements[0]
    end

  end

  def _nt_TypeDefList
    start_index = index
    if node_cache[:TypeDefList].has_key?(index)
      cached = node_cache[:TypeDefList][index]
      @index = cached.interval.end if cached
      return cached
    end
